fix: add missing translations to AppRouter + for 'Loading...'

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,8 @@
 {
-	"Language": "English",
-	"Main": "Main",
-	"About": "About",
-	"Collapse": "Collapse",
-	"Expand": "Expand"
+  "Language": "English",
+  "Main": "Main",
+  "About": "About",
+  "Collapse": "Collapse",
+  "Expand": "Expand",
+  "Loading": "Loading"
 }
