--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,6 @@
 	"Main": "Главная",
 	"About": "О сайте",
 	"Collapse": "Свернуть",
-	"Expand": "Развернуть"
+	"Expand": "Развернуть",
+	"Loading": "Загрузка"
 }
