chore: + translations for NotFoundPage

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
   "About": "About",
   "Collapse": "Collapse",
   "Expand": "Expand",
-  "Loading": "Loading"
+  "Loading": "Loading",
+  "Page not found": "Page not found"
 }
