--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,6 @@
 	"About": "О сайте",
 	"Collapse": "Свернуть",
 	"Expand": "Развернуть",
-	"Loading": "Загрузка"
+	"Loading": "Загрузка",
+	"Page not found": "Страницы не найдена"
 }
