chore: add missing translations

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,7 @@
   "About": "About",
   "Collapse": "Collapse",
   "Expand": "Expand",
-  "Page not found": "Page not found"
+  "Page not found": "Page not found",
+  "Something went wrong": "Something went wrong",
+  "Reload page": "Reload page"
 }
