--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,7 @@
 	"About": "О сайте",
 	"Collapse": "Свернуть",
 	"Expand": "Развернуть",
-	"Page not found": "Страницы не найдена"
+	"Page not found": "Страницы не найдена",
+	"Something went wrong": "Что-то пошло не так",
+	"Reload page": "Обновить страницу"
 }
