--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,6 @@
 	"About": "О сайте",
 	"Page not found": "Страницы не найдена",
 	"Something went wrong": "Что-то пошло не так",
-	"Reload page": "Обновить страницу"
+	"Reload page": "Обновить страницу",
+	"Short language": "Ru"
 }
