feat: start implementing auth modal window

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
   "Page not found": "Page not found",
   "Something went wrong": "Something went wrong",
   "Reload page": "Reload page",
-  "Short language": "En"
+  "Short language": "En",
+  "Sign in": "Sign in"
 }
