--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,7 @@
   "page_not_found": "Страницы не найдена",
   "reload": "Обновить страницу",
   "sign_in": "Войти",
-  "something_went_wrong": "Что-то пошло не так"
+  "something_went_wrong": "Что-то пошло не так",
+  "username_placeholder": "Введите имя пользователя",
+  "password_placeholder": "Введите пароль"
 }
