--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,10 +1,12 @@
 {
-	"Language": "Русский",
-	"Main": "Главная",
-	"About": "О сайте",
-	"Page not found": "Страницы не найдена",
-	"Something went wrong": "Что-то пошло не так",
-	"Reload page": "Обновить страницу",
-	"Short language": "Ru",
-	"Sign in": "Войти"
+  "short_language": "Ру",
+  "language": "Русский",
+  "about": "О нас",
+  "main": "Главная",
+  "page_not_found": "Страницы не найдена",
+  "reload": "Обновить страницу",
+  "sign_in": "Войти",
+  "something_went_wrong": "Что-то пошло не так",
+  "username_placeholder": "Введите имя пользователя",
+  "password_placeholder": "Введите пароль"
 }
